# coral

./: CMakeLists.txt  CMakePresets.json  readme.md
src/: .clang-format  dear_imgui.cpp  dear_imgui.hpp  gui.hpp  imgui_config.hpp  load_file.cpp  main.cpp  rule.hpp
